# azhdaha

./: .gitattributes  .gitignore  .justfile  Cargo.toml  README.md
.github/workflows/: ci.yml
analyzer/: Cargo.toml
analyzer/src/: dfs.rs  lib.rs  linear.rs  process.rs  report.rs  statement.rs  terminator.rs
annotations/: azhdaha.h
annotations/include/: azhdaha.h  stdio.h  stdlib.h
ast-utils/: Cargo.toml
ast-utils/src/: ast.rs  lib.rs  preprocess.rs
azhdaha/: Cargo.toml
azhdaha-errors/: Cargo.toml
azhdaha-errors/src/: lib.rs
azhdaha/src/: main.rs  preprocess.rs  preprocessor.rs
cli/: Cargo.toml
cli-utils/: Cargo.toml
cli-utils/src/: arg_parser.rs  lib.rs
cli/src/: arg_parser.rs  lib.rs
examples/: compile_commands.json
examples/dangling-pointer/: main.c
examples/double-free/: main.c
examples/include/: azhdaha.h
examples/memory-leak/: main.c
examples/use-after-free/: main.c
hir-rep/: Cargo.toml
hir-repr/: Cargo.toml
hir-repr/src/: block.rs  constant.rs  constants.rs  construct.rs  datatype.rs  datatypes.rs  display.rs  expr.rs  item.rs  lib.rs  lowering.rs  path.rs
mir-rep/: Cargo.toml
mir-repr/: Cargo.toml
mir-repr/src/: basic_block.rs  datatypes.rs  display.rs  lib.rs  operand.rs  statement.rs  terminator.rs  types.rs
repr/: Cargo.toml
repr/src/: display.rs  lib.rs
repr/src/hir/: block.rs  constants.rs  datatypes.rs  decl.rs  expr.rs  initializer_tree.rs  item.rs  local.rs  mod.rs  path.rs  resolver.rs  stmt.rs  ty.rs
repr/src/mir/: allocation.rs  arena.rs  basic_block.rs  datatypes.rs  initializer_tree.rs  mod.rs  operand.rs  optimization.rs  place.rs  rvalue.rs
tests/: .clang-format  compile_commands_safe.json  compile_commands_unsafe.json  double-free.c  memory-leak.c  run-tests.py  use-after-free.c
tests/safe/: case-safe-1.c  case-safe-10.c  case-safe-100.c  case-safe-101.c  case-safe-102.c  case-safe-103.c  case-safe-104.c  case-safe-105.c  case-safe-106.c  case-safe-107.c  case-safe-108.c  case-safe-109.c  case-safe-11.c  case-safe-110.c  case-safe-111.c  case-safe-112.c  case-safe-113.c  case-safe-114.c  case-safe-115.c  case-safe-116.c  case-safe-117.c  case-safe-118.c  case-safe-119.c  case-safe-12.c  case-safe-120.c  case-safe-13.c  case-safe-14.c  case-safe-15.c  case-safe-16.c  case-safe-17.c  case-safe-18.c  case-safe-19.c  case-safe-2.c  case-safe-20.c  case-safe-21.c  case-safe-22.c  case-safe-23.c  case-safe-24.c  case-safe-25.c  case-safe-26.c  (+80 more)
tests/unsafe/: case-unsafe-1.c  case-unsafe-10.c  case-unsafe-100.c  case-unsafe-11.c  case-unsafe-12.c  case-unsafe-13.c  case-unsafe-14.c  case-unsafe-15.c  case-unsafe-16.c  case-unsafe-17.c  case-unsafe-18.c  case-unsafe-19.c  case-unsafe-2.c  case-unsafe-20.c  case-unsafe-21.c  case-unsafe-22.c  case-unsafe-23.c  case-unsafe-24.c  case-unsafe-25.c  case-unsafe-26.c  case-unsafe-27.c  case-unsafe-28.c  case-unsafe-29.c  case-unsafe-3.c  case-unsafe-30.c  case-unsafe-31.c  case-unsafe-32.c  case-unsafe-33.c  case-unsafe-34.c  case-unsafe-35.c  case-unsafe-36.c  case-unsafe-37.c  case-unsafe-38.c  case-unsafe-39.c  case-unsafe-4.c  case-unsafe-40.c  case-unsafe-41.c  case-unsafe-42.c  case-unsafe-43.c  case-unsafe-44.c  (+60 more)
