[workspace]
members = [
    "azhdaha",
    "cli-utils",
    "ast-utils",
    "hir-repr",
    "mir-repr"
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
log = "0.4.26"
anyhow = "1.0.96"
compile_commands = "0.3.0"
tree-sitter = "0.25.2"
la-arena = "0.3.1"

[workspace.lints.clippy]
print_stdout = "deny"
print_stderr = "deny"

missing_panics_doc = "deny"
missing_docs_in_private_items = "warn"
