[workspace]
members = ["ast-utils", "azhdaha", "azhdaha-errors", "cli-utils", "repr"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.98"
ariadne = { git = "https://github.com/skye-tan/ariadne.git", branch = "derive-clone-for-report-builder" }
compile_commands = "0.3.0"
env_logger = "0.11.8"
itertools = "0.14.0"
la-arena = "0.3.1"
log = "0.4.27"
rayon = "1.11.0"
tree-sitter = "0.25.8"
tree-sitter-c = { git = "https://github.com/HKalbasi/tree-sitter-c.git", version = "0.24.1" }

[workspace.lints.clippy]
many_single_char_names = "deny"
missing_panics_doc = "deny"
missing_docs_in_private_items = "deny"
print_stdout = "deny"
print_stderr = "deny"
