[package]
name = "ast-utils"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
log.workspace = true
anyhow.workspace = true
compile_commands.workspace = true
tree-sitter.workspace = true
tree-sitter-c = { git = "https://github.com/skye-tan/tree-sitter-c.git", version = "0.23.5" }