[package]
name = "azhdaha"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
cli-utils = { version = "0.1.0", path = "../cli-utils" }
ast-utils = { version = "0.1.0", path = "../ast-utils" }
hir-repr = { version = "0.1.0", path = "../hir-repr" }
log.workspace = true
anyhow.workspace = true
env_logger = "0.11.7"
