[package]
name = "azhdaha"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
analyzer = { version = "0.1.0", path = "../analyzer" }
anyhow.workspace = true
ast-utils = { version = "0.1.0", path = "../ast-utils" }
cli-utils = { version = "0.1.0", path = "../cli-utils" }
env_logger.workspace = true
log.workspace = true
repr = { version = "0.1.0", path = "../repr" }
