[package]
name = "repr"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
ast-utils = { version = "0.1.0", path = "../ast-utils" }
anyhow.workspace = true
itertools.workspace = true
la-arena.workspace = true
log.workspace = true
smallvec.workspace = true
tree-sitter.workspace = true
