[package]
name = "repr"
version = "0.1.0"
edition.workspace = true

[dependencies]
ast-utils = { version = "0.1.0", path = "../ast-utils" }
azhdaha-errors = { version = "0.1.0", path = "../azhdaha-errors" }
itertools.workspace = true
la-arena.workspace = true
log.workspace = true
tree-sitter.workspace = true
unescaper = "0.1.6"

[lints]
workspace = true
